간단한 레이아웃

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo',
+    Pretendard, Roboto, 'Noto Sans KR', 'Segoe UI', 'Malgun Gothic', sans-serif;
+}
+
+@layer base {
+  html,
+  body {
+    @apply bg-neutral-100;
+  }
+
+  input,
+  select,
+  textarea {
+    @apply focus:outline-none;
+  }
+}
