--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@
     @apply max-h-screen overflow-auto;
   }
   body {
-    @apply bg-neutral-100;
+    @apply bg-neutral-100 duration-150 dark:bg-neutral-900 dark:text-neutral-300;
   }
   input,
   select,
