답장 및 스레드 기능 추가

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,9 @@
   textarea {
     @apply focus:outline-none;
   }
+  textarea {
+    @apply resize-none;
+  }
   button {
     @apply disabled:cursor-not-allowed;
   }
