Profile Modal에 Skeleton 추가, Mention 기능 UI 적용

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,3 +34,9 @@
     @apply disabled:cursor-not-allowed;
   }
 }
+
+@layer components {
+  .skeleton {
+    @apply animate-pulse bg-neutral-200 dark:bg-neutral-700;
+  }
+}
