--- a/styles/quill-emoji.css
+++ b/styles/quill-emoji.css
@@ -1,107 +1,35 @@
-#quill-editor {
-  position: relative;
-}
-.completions {
-  background: #fff;
-  border-radius: 2px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
-  list-style: none;
-}
-.completions,
-.completions > li {
-  margin: 0;
-  padding: 0;
-}
-.completions > li > button {
-  background: none;
-  border: none;
-  box-sizing: border-box;
-  display: block;
-  height: 2em;
-  margin: 0;
-  padding: 0.25em 0.5em;
-  text-align: left;
-  width: 100%;
-}
-.completions > li > button:hover {
-  background: #ddd;
-}
-.completions > li > button:focus {
-  background: #ddd;
-  outline: none;
-}
-.completions > li > button > .matched {
-  color: #000;
-  font-weight: 700;
-}
-.completions > li > button > * {
-  vertical-align: middle;
-}
 .emoji_completions {
-  background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 3px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
-  list-style: none;
-  margin: 0;
-  padding: 6px;
-  left: 0px !important;
-  bottom: 20px !important;
-  top: auto !important;
+  @apply !left-0 !bottom-5 !top-auto rounded border p-1 text-sm shadow-lg dark:border-neutral-700 dark:bg-neutral-900;
 }
 .emoji_completions li {
-  display: inline-block;
-  margin: 2px 0;
-  padding: 0;
+  @apply my-0.5 inline-block;
 }
 .emoji_completions li:not(:last-of-type) {
   margin-right: 3px;
 }
 .emoji_completions > li > button {
-  background: #efefef;
-  border: none;
-  border-radius: 3px;
-  box-sizing: border-box;
-  display: block;
-  margin: 0;
-  padding: 3px 2px 6px;
-  text-align: left;
-  width: 100%;
+  @apply rounded bg-neutral-200 p-1 dark:bg-neutral-800;
 }
 .emoji_completions > li > button:hover {
-  background: #2d9ee0;
-  color: #fff;
+  @apply bg-blue-400 text-neutral-50;
 }
 .emoji_completions > li > button:focus {
-  background: #2d9ee0;
-  color: #fff;
-  outline: none;
+  @apply bg-blue-500 text-neutral-50 outline-none;
 }
 .emoji_completions > li > button.emoji-active {
-  background: red;
-  background: #2d9ee0;
-  color: #fff;
-  outline: none;
+  @apply bg-blue-500 text-neutral-50 outline-none;
 }
 .emoji_completions > li > button > .matched {
-  font-weight: 700;
+  @apply font-bold;
 }
 .emoji_completions > li > button > *,
 .ico {
-  vertical-align: middle;
+  @apply align-middle;
 }
 .ico {
   font-size: 18px;
   line-height: 0;
   margin-right: 5px;
-}
-#emoji-palette {
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 3px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
-  max-width: 250px;
-  position: absolute;
-  z-index: 999;
 }
 .bem {
   cursor: pointer;
@@ -110,39 +38,6 @@
   margin: 2px;
   text-align: center;
   width: 34px;
-}
-#tab-filters {
-  margin: 20px auto 0;
-  width: 210px;
-}
-.emoji-tab {
-  cursor: pointer;
-  display: inline-table;
-  height: 100%;
-  min-height: 30px;
-  text-align: center;
-  width: 30px;
-}
-#tab-toolbar {
-  background-color: #f7f7f7;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-  padding: 4px 4px 0;
-}
-#tab-toolbar ul {
-  margin: 0;
-  padding: 0;
-}
-#tab-toolbar .active {
-  border-bottom: 3px solid #2ab27b;
-}
-#tab-panel {
-  background: #fff;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-height: 220px;
-  overflow-y: scroll;
-  padding: 2px;
 }
 #quill-editor x-contain,
 contain {
@@ -157,10 +52,6 @@ contain {
   border: 1px solid #000;
   height: 25px;
   padding: 5px;
-}
-.ql-picker.ql-table .ql-picker-label:before,
-button.ql-table:after {
-  content: 'TABLE';
 }
 button.ql-contain:after {
   content: 'WRAP';
@@ -182,25 +73,6 @@ button.ql-table[value='append-col']:after {
   position: fixed;
   top: 0;
   width: 100%;
-}
-.textarea-emoji-control {
-  height: 25px;
-  right: 4px;
-  top: 10px;
-  width: 25px;
-}
-#textarea-emoji {
-  border: 1px solid #66afe9;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 3px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
-  max-width: 250px;
-  position: absolute;
-  right: 0;
-  z-index: 999;
-}
-.ql-editor {
-  padding-right: 26px;
 }
 .i-activity {
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" viewBox="0 0 40 40"><g fill="none" fill-rule="evenodd"><g fill="%236F6D70"><g transform="translate(7.500000, 7.500000)"><path stroke="%236F6D70" d="M18.02 1.36c5.92 3.02 8.28 10.26 5.26 16.18-2.12 4.17-6.35 6.57-10.73 6.57-1.83 0-3.7-.4-5.45-1.3-5.9-3-8.27-10.22-5.25-16.2C3.97 2.5 8.2.1 12.57.1c1.84 0 3.7.42 5.45 1.3zm4.7 11.44c.1-1.3-.06-2.6-.47-3.87-.13-.38-.27-.75-.43-1.1l-3.42-1.6-1.57-3.4c-.62-.3-1.27-.5-1.92-.68-.7-.18-1.5-.27-2.3-.27-.4 0-.8.02-1.2.06L8.9 4.74l-3.74.43c-.63.68-1.16 1.45-1.6 2.28-.42.84-.72 1.72-.9 2.63l1.84 3.3-.74 3.68c.3.56.66 1.08 1.1 1.58.76.94 1.7 1.7 2.8 2.32l3.7-.74 3.26 1.84c1.13-.23 2.23-.65 3.24-1.26.6-.35 1.2-.77 1.7-1.24l.44-3.74 2.78-2.55.05-.47z" stroke-linecap="round" stroke-linejoin="round"/><polygon points="10.6158689 8.50666885 8.42649168 12.8046921 11.836847 16.2129328 16.1342124 14.0235556 15.3793892 9.26144504"/></g></g></g></svg>');
