--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,12 @@
   button {
     @apply disabled:cursor-not-allowed;
   }
+  input[type='search']::-webkit-search-decoration,
+  input[type='search']::-webkit-search-cancel-button,
+  input[type='search']::-webkit-search-results-button,
+  input[type='search']::-webkit-search-results-decoration {
+    -webkit-appearance: none;
+  }
 }
 
 @layer components {
