다크 모드 적용

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,9 @@
   input[type='search']::-webkit-search-results-decoration {
     -webkit-appearance: none;
   }
+  kbd {
+    @apply flex h-5 items-center justify-center rounded border border-slate-400 bg-gradient-to-br from-slate-300 to-slate-200 px-1 tracking-tighter text-slate-600 shadow-2xl dark:border-slate-800 dark:from-slate-800 dark:to-slate-600 dark:text-slate-400;
+  }
 }
 
 @layer components {
